<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Aboutancol"
    android:background="@drawable/gradient"
    android:paddingTop="10dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="ANCOL "
                android:gravity="center_horizontal"
                android:paddingTop="7dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:background="@drawable/gradient1"
                android:textAllCaps="true"
                android:textAppearance="@style/CardView.Dark"/>

            <ImageView
                android:id="@+id/gambar"
                android:layout_width="350dp"
                android:layout_height="120dp"
                android:background="@drawable/ancol"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

            <TextView
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:text="@string/subtitle"
                android:textAppearance="@style/CardView.Dark"
                android:textSize="25sp"
                android:gravity="left"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:text="@string/isi"
                android:textSize="18sp"
                android:paddingTop="2dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:text="@string/isi1"
                android:textSize="18sp"
                android:paddingTop="5dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:text="@string/subtitle2"
                android:textSize="25sp"
                android:textAppearance="@style/CardView.Dark"
                android:paddingTop="10dp"
                android:gravity="left"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/isi2"
                android:paddingTop="2dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>
            <!--Button1-->
            <Button
                android:id="@+id/button1"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:text="DUFAN"
                android:textSize="20sp"
                android:paddingBottom="5dp"
                android:fontFamily="@font/garamondit"
                android:textColor="#005AA7"
                android:background="#74ebd5"
                android:layout_marginHorizontal="50dp"/>
            <!--Button2-->
            <Button
                android:id="@+id/button2"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:text="ALIVE MUSEUM"
                android:textSize="20sp"
                android:paddingBottom="5dp"
                android:fontFamily="@font/garamondit"
                android:textColor="#005AA7"
                android:background="#74ebd5"
                android:layout_marginHorizontal="50dp"/>
            <!--Button3-->
            <Button
                android:id="@+id/button3"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:text="ATLANTIS"
                android:textSize="20sp"
                android:paddingBottom="5dp"
                android:fontFamily="@font/garamondit"
                android:textColor="#005AA7"
                android:background="#74ebd5"
                android:layout_marginHorizontal="50dp"/>
            <!--Button4-->
            <Button
                android:id="@+id/button4"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:text="OCEAN DREAM SAMUDRA"
                android:textSize="20sp"
                android:paddingBottom="5dp"
                android:fontFamily="@font/garamondit"
                android:textColor="#005AA7"
                android:background="#74ebd5"
                android:layout_marginHorizontal="50dp"/>
            <!--Button5-->
            <Button
                android:id="@+id/button5"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="50dp"
                android:layout_centerHorizontal="true"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:text="SEAWORLD"
                android:textSize="20sp"
                android:paddingBottom="5dp"
                android:fontFamily="@font/garamondit"
                android:textColor="#005AA7"
                android:background="#74ebd5"/>
            <!--Button6-->
            <Button
                android:id="@+id/button6"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginBottom="20dp"
                android:layout_centerHorizontal="true"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:text="OCEAN ECO PARK"
                android:textSize="20sp"
                android:paddingBottom="5dp"
                android:fontFamily="@font/garamondit"
                android:textColor="#005AA7"
                android:background="#74ebd5"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>